Bug 412496 - Can't alter copy/paste shortcut and it doesn't respect the KDE global shortcuts for copy/paste
Summary: Can't alter copy/paste shortcut and it doesn't respect the KDE global shortcu...
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-01 06:45 UTC by Adam
Modified: 2020-07-06 19:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam 2019-10-01 06:45:57 UTC
SUMMARY

Can't alter copy/paste shortcut and it doesn't respect the KDE global shortcuts for copy/paste. I am forced to use ctrl-shift+c/v.

STEPS TO REPRODUCE
1. Change copy/paste KDE global shortcut
 
OBSERVED RESULT
Has no effect on Yakuake

EXPECTED RESULT
Should follow the KDE global shortcut rules


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.3

ADDITIONAL INFORMATION
Comment 1 Christoph Feck 2019-10-24 12:56:02 UTC
It cannot use the global shortcuts, because Ctrl+C in terminals is reserved for sending the SIGTERM signal. Additionally, some terminal applications (such as editors), make use of other Ctrl+Letter shortcuts. For this reason, nearly all shortcuts in Konsole (in thus Yakuake) need to use Ctrl+Shift+Letter.
Comment 2 Adam 2019-10-24 19:15:34 UTC
Of all the terminals I have used, Yakuake is the only one that won't allow me to remap the shortcut. I use ctrl c/v a hell of a lot more than I ever need to send SIGTERM and it's quite detrimental to my workflow. Ctrl-shift+CV is not an easy thing to do one handed and is extremely cumbersome.
Comment 3 Adam 2019-10-24 19:17:10 UTC
Also, Konsole allows me to remap to ctrl-c/v.
Comment 4 krmozejko 2020-03-08 20:05:53 UTC
Exactly as Adam says - it is the first terminal which does not let me change copy/paste shortcuts to ctrl+c/ctrl+v. Very disappointing, especially Konsole allows that. Is there any particular reason for that?
Comment 5 oOdd 2020-04-17 11:44:12 UTC
I also now spent several hours for a workaround, but it is very frustrating. Things I found out so far:
* You can disable ctrl+c SIGINT by edit profile->keyboard: add C-Shift+Ctrl \x00
* You can add ctrl+shift+c SIGINT by adding C+Shift+Ctrl \x03

This works, but I was not able to set the new shortcuts ctrl+c and ctrl+v permanently. The settings from konsole are not used - the only way I found was for the current session contextMenu->right click on 'paste' or 'copy' -> there you can change the shortcut. All works like a charm but you have to do it for every session, and again after yakuake was restarted.

I then looked for a way to set this automatically with a script with dbus events, but didn't manage it, no idea if this is possible.

Just a possibility to persist the shortcut config would help, or any further hint. I would appreciate.
Comment 6 Maximilian Schiller 2020-07-06 19:18:59 UTC
Git commit a0b08cb1f71ef18449bfbf5852c01e323604142f by Maximilian Schiller.
Committed on 06/07/2020 at 19:18.
Pushed by mschiller into branch 'master'.

Make it possible to configure the konsolepart shortcuts

This patch allows the user to configure the by konsolepart provided actions. For example it wasn't possible to configure the copy/paste shortcuts. Also many the "X is an ambiguous shortcut" can now be fixed and remapped if the user so desires.

Internally this is done by collecting the actioncollections from the kparts and then providing the first one to the shortcutconfigure dialog. After the shortcuts have been configured the actioncollections from all the other terminals get synchronized.

M  +32   -1    app/mainwindow.cpp
M  +27   -0    app/sessionstack.cpp
M  +2    -0    app/sessionstack.h
M  +29   -0    app/terminal.cpp
M  +1    -1    app/terminal.h

https://invent.kde.org/utilities/yakuake/commit/a0b08cb1f71ef18449bfbf5852c01e323604142f